...
    appViewModel: AppViewModel = hiltViewModel(),
) {
    val focusManager = LocalFocusManager.current

    if (isSearching) {
        RoundedIconButton(
            modifier = Modifier.testTag("SearchBackButton"),
            bordered = true,
            onClick = { focusManager.clearFocus() },
            imageVector = Icons.AutoMirrored.Filled.ArrowBack,
            contentDescription = "Back",
        )
    } else {
        RoundedIconButton(
            modifier = Modifier.testTag("MenuButton"),
            bordered = true,
            onClick = { appViewModel.setMenuOpen(true) },
            imageVector = Icons.Rounded.Menu,
            contentDescription = "Menu",
        )
    }
...
