...
                    drawRect(Color.White.copy(alpha = headerBackgroundAlpha))
                }
                .padding(horizontal = 5.dp, vertical = 15.dp),
            verticalAlignment = Alignment.CenterVertically,
        ) {
            HeaderButton(isSearching)
            SearchBar(
                modifier = Modifier
                    .testTag("SearchBar")
                    .weight(1f),
                setIsSearching = { state -> isSearching = state },
                onSearch = { keyword -> geocodingViewModel.search(keyword) }
            )
...
