...
}

@Composable
private fun NoSearchResult() {
    Box(
        modifier = Modifier
            .testTag("SearchNotFoundBox")
            .fillMaxWidth()
            .background(Color.White)
            .padding(vertical = 20.dp),
    ) {
        Text(
            modifier = Modifier.fillMaxWidth(),
...
